@@ -28,7 +28,7 @@ export("?", .DollarNames, CRAN.packages, Rprof, Rprofmem, RShowDoc,
        new.packages, news, object.size, old.packages,
        package.skeleton, packageDescription, packageName,
        packageVersion, packageStatus, page, person, personList, pico,
-       process.events, prompt, promptData, promptPackage,
+       process.events, prompt, promptData, promptImport, promptPackage,
        rc.getOption, rc.options, rc.settings, rc.status,
        readCitationFile, read.DIF, read.csv, read.csv2, read.delim,
        read.delim2, read.fwf, read.fortran, read.socket, read.table,
